syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

import "google/api/annotations.proto";
import "indexes/commands.proto";
import "indexes/queries.proto";

service IndexesService {
  //
  // Write-side Services
  //
  rpc CreateIndex(CreateIndexRequest) returns (CreateIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}",
      body: "*"
    };
  };

  rpc StartIndex(StartIndexRequest) returns (StartIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}/start",
    };
  }

  rpc StopIndex(StopIndexRequest) returns (StopIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}/stop",
    };
  }

  rpc DeleteIndex(DeleteIndexRequest) returns (DeleteIndexResponse) {
    option (google.api.http) = {
      delete: "/v2/indexes/{name}"
    };
  }

  //
  // Read-side Services
  //
  rpc ListIndexes(ListIndexesRequest) returns (ListIndexesResponse) {
    option (google.api.http) = {
      get: "/v2/indexes",
    };
  }

  rpc GetIndex(GetIndexRequest) returns (GetIndexResponse) {
    option (google.api.http) = {
      get: "/v2/indexes/{name}",
    };
  }
}
